--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "rust-start-aw"
 version = "0.1.0"
-authors = ["Daisuke Miyakawa <d.miyakawa+mac@gmail.com>"]
-edition = "2018"
+authors = ["Daisuke Miyakawa <d.miyakawa@gmail.com>"]
+edition = "2019"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
